# employee-onboarding-chatbot

./: .env.example  .gitignore  README.md  app.py  config.py  pyproject.toml
alembic/: env.py
alembic/versions/: 7e7dc669f2d8_initial_schema.py
factories/: employees.py
scripts/: ingest.py  seed_employees.py
src/: auth.py  db.py  models.py  repository.py  retriever.py
src/agent/: graph.py  prompts.py  tools.py
utils/: constants.py  tracing.py  usage.py
